--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
-Otmane Aroussi <>
+Otmane Aroussi <aroussiotmane27@gmail.com>
 Mourad Tiferras <mourad.edu8@gmail.com>
